# pendulum-oscillation-analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
notebooks/: 01_data_inspection_and_setup.ipynb
