[tool.poetry]
name = "pendulum-oscillation-analysis"
version = "0.1.0"
description = "A data science project analyzing the oscillation of pendulums using theoretical and experimental models."
authors = ["Jobet P. Casquejo <jobetcasquejo221@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pendulum_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pandas = "^2.2.0"
matplotlib = "^3.8.0"
scipy = "^1.12.0"
jupyterlab = "^4.0.0"
seaborn = "^0.13.0"
ipykernel = "^6.29.0"
plotly = "^5.20.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
isort = "^5.13.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
