[tool.poetry]
name = "pendulum-oscillation-analysis"
version = "0.1.0"
description = "A data science project analyzing the oscillation of pendulums using theoretical and experimental models."
authors = ["Jobet P. Casquejo <jobetcasquejo221@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.2"
pandas = "^2.2.0"
matplotlib = "^3.10.3"
scipy = "^1.12.0"
jupyterlab = "^4.0.0"
seaborn = "^0.13.0"
ipykernel = "^6.29.0"
plotly = "^6.2.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
